
SUBDIRS = buildlib apt-pkg methods cmdline doc po

ACLOCAL_AMFLAGS = -I m4 -I buildlib

EXTRA_DIST = \
		AUTHORS.RPM \
		COPYING.GPL \
		rpmpriorities \
		test/conf.cc \
		test/extract-control.cc \
		test/hash.cc \
		test/makefile \
		test/mthdcat.cc \
		test/rpmver.cc \
		test/scratch.cc \
		test/testdeb.cc \
		test/testextract.cc \
		test/uri.cc \
		test/versions.lst \
		test/versiontest.cc \
		contrib/apt-rpm/apt-rpm \
		contrib/apt-rpm/apt-rpm.1 \
		contrib/apt-files/README \
		contrib/apt-files/apt-files.lua \
		contrib/apt-files/apt-files.conf \
		contrib/apt-files/convert.py \
		contrib/install-devel/README \
		contrib/install-devel/install-devel.lua \
		contrib/apt-groupinstall/README \
		contrib/apt-groupinstall/apt-groupinstall.lua \
		contrib/apt-groupinstall/apt-groupinstall.py \
		contrib/apt-groupinstall/apt-groupinstall.conf \
		contrib/proxypasswd/README \
		contrib/proxypasswd/proxypasswd.lua
		contrib/guess/README \
		contrib/guess/guess.lua \
		contrib/guess/guess.conf
